--- a/User Auth/templates/home.html
+++ b/User Auth/templates/home.html
@@ -51,14 +51,16 @@
   <body>
     <div class="container">
       <div id="sidebar">
-        <h1 id="logo" onclick="window.location.href='/'">Tenacity</h1>
+        <h1 id="logo" onclick="window.location.href='/'">
+          <a href="/" style="text-decoration: none; color: inherit">Tenacity</a>
+        </h1>
         <div
           class="sidebar-section"
           id="home"
           onclick="window.location.href='/home'"
         >
           <img src="{{ url_for('static', filename='icons/home.png') }}" />
-          <a onclick="window.location.href='/home'">Home</a>
+          <a href="/home" style="text-decoration: none; color: inherit">Home</a>
           <div id="marker"></div>
         </div>
         <div
@@ -67,7 +69,9 @@
           onclick="window.location.href='/dashboard'"
         >
           <img src="{{ url_for('static', filename='icons/dashboard.png') }}" />
-          <a onclick="window.location.href='/dashboard'">Dashboard</a>
+          <a href="/dashboard" style="text-decoration: none; color: inherit"
+            >Dashboard</a
+          >
         </div>
         <div
           class="sidebar-section"
@@ -75,7 +79,9 @@
           onclick="window.location.href='/files'"
         >
           <img src="{{ url_for('static', filename='icons/folder.png') }}" />
-          <a onclick="window.location.href='/files'">My Files</a>
+          <a href="/files" style="text-decoration: none; color: inherit"
+            >My Files</a
+          >
         </div>
         <div
           class="sidebar-section"
@@ -83,7 +89,9 @@
           onclick="window.location.href='/upload'"
         >
           <img src="{{ url_for('static', filename='icons/upload.png') }}" />
-          <a onclick="window.location.href='/files'">Upload</a>
+          <a href="/upload" style="text-decoration: none; color: inherit"
+            >Upload</a
+          >
         </div>
         <a class="others1" onclick="window.location.href='/logout'"
           ><span>Log Out</span>➜]</a
@@ -96,10 +104,14 @@
         <div id="option-container">
           <h1>Ciao👋! <span>What can I do for you?</span></h1>
           <button id="fade-in-2" onclick="window.location.href='/upload'">
-            I'd like to upload some files for now.
+            <a href="/upload" style="text-decoration: none; color: inherit"
+              >I'd like to upload some files for now.</a
+            >I'd like to upload some files for now.
           </button>
           <button id="fade-in-3" onclick="window.location.href='/dashboard'">
-            Let's check out the dashboard for now.
+            <a href="/dashboard" style="text-decoration: none; color: inherit"
+              >Let's check out the dashboard for now.</a
+            >
           </button>
         </div>
       </div>
