--- a/User Auth/templates/log-in.html
+++ b/User Auth/templates/log-in.html
@@ -50,10 +50,14 @@
   </head>
   <body>
     <div class="header">
-      <h1 id="title" onclick="window.location.href='/'">Tenacity</h1>
+      <h1 id="title" onclick="window.location.href='/'">
+        <a href="/" style="text-decoration: none; color: inherit">Tenacity</a>
+      </h1>
       <h2 id="motto">"Fall seven times, stand up eight."</h2>
       <button class="log-in" onclick="window.location.href='/register'">
-        Sign Up
+        <a href="/register" style="text-decoration: none; color: inherit"
+          >Sign Up</a
+        >
       </button>
     </div>
     <div class="container" id="fade-in-1">
