Fixing some small issues with the backlinks

--- a/User Auth/templates/dashboard.html
+++ b/User Auth/templates/dashboard.html
@@ -51,9 +51,7 @@
   <body>
     <div class="container">
       <div id="sidebar">
-        <h1 id="logo" onclick="window.location.href='/'">
-          <a href="/" style="text-decoration: none; color: inherit">Tenacity</a>
-        </h1>
+        <h1 id="logo" onclick="window.location.href='/'">Tenacity</h1>
         <div
           class="sidebar-section"
           id="home"
