--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -93,7 +93,7 @@
       <button
         id="log-in"
         class="log-in"
-        onclick="window.location.href='/register'"
+        onclick="window.location.href='/login'"
       >
         <a href="/login" style="text-decoration: none; color: inherit"
           >Log In</a
