--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="monetag" content="b36c53222b9bde4e00186256820ca3ac" />
     <!-- Google tag (gtag.js) -->
     <script
       async
