--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="monetag" content="b36c53222b9bde4e00186256820ca3ac" />
+    <meta name="google-adsense-account" content="ca-pub-1142390843999168">
     <script data-cfasync="false" type="text/javascript">
       (() => {
         var K =
