Adding a highlighter effect

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -123,8 +123,8 @@
       <div>
         <h1>Seamless, Secure</h1>
         <p>
-          Store 100GB of files online and retrieve them from any device with an
-          internet connection, anywhere, anytime.
+          Store <span id="focus">100GB</span> of files online and retrieve them
+          from any device with an internet connection, anywhere, anytime.
         </p>
         <button onclick="window.location.href='/register'">
           <a href="/register" style="text-decoration: none; color: inherit"
