--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -325,6 +325,13 @@ span {
   box-shadow: 0 0 10px #f57c04, 0 0 20px #f57c04, 0 0 30px #f57c04;
 }
 
+#focus {
+  background-color: #ff0000;
+  padding: 2px 6px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
 #third-section {
   display: flex;
   flex-direction: row;
