--- a/User Auth/static/css/styles.css
+++ b/User Auth/static/css/styles.css
@@ -326,10 +326,9 @@ span {
 }
 
 #focus {
-  background-color: #ff0000;
+  background-color: #ce7706;
   padding: 2px 6px;
   border-radius: 4px;
-  border: 1px solid #ccc;
 }
 
 #third-section {
