Changing yt url

--- a/User Auth/templates/index.html
+++ b/User Auth/templates/index.html
@@ -172,7 +172,7 @@
         <div
           target="_blank"
           id="youtube"
-          onclick="window.open('https://www.youtube.com/channel/UCNFFuukNWEgUSXjk52w2JcA', '_blank')"
+          onclick="window.open('https://www.youtube.com/@Tenacity-cloud', '_blank')"
         >
           <img
             src="/static/icons/youtube.png"
